# mdbook-kroki-preprocessor

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
example/: book.toml
example/assets/: plant-diagram.plantuml
example/src/: SUMMARY.md  chapter.md  inline_diagrams.md  intro.md  referenced_diagrams.md
example/src/sources_root_assets/: example.c4plantuml
example/src/subchapters/: reference_diagram_roots.md  root-relative-path.md  subchapter.md
src/: diagram.rs  main.rs
